Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77303

Qt::WA_TranslucentBackground not work in WebAssembly

XMLWordPrintable

    • WebAssembly
    • 809a96d6d94a93046dc63dd6f52c51ae90c374f8 (qt/qtbase/5.14)

      I set 

      QWidget::setAttribute(Qt::WA_TranslucentBackground); setWindowFlags(Qt::CustomizeWindowHint | Qt::FramelessWindowHint);

      and it work ok in Windows, but if I build it in WebAseembly - background black.

        For Gerrit Dashboard: QTBUG-77303
        # Subject Branch Project Status CR V

            lpotter Lorn Potter
            iurii Iurii Chetyrin
            Votes:
            2 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes